gccida/g0/int_fits_type_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4793:19: error: expected expression
return *( _OWORD *)&type->decl.abstract_origin->block.vars >= *( _OWORD *)&c->block.vars 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4793:11: error: use of undeclared identifier '_OWORD'
return *( _OWORD *)&type->decl.abstract_origin->block.vars >= *( _OWORD *)&c->block.vars 
          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4793:74: error: expected expression
return *( _OWORD *)&type->decl.abstract_origin->block.vars >= *( _OWORD *)&c->block.vars 
                                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4793:66: error: use of undeclared identifier '_OWORD'
return *( _OWORD *)&type->decl.abstract_origin->block.vars >= *( _OWORD *)&c->block.vars 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4794:15: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4794:7: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4794:45: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4794:37: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4797:19: error: expected expression
return *( _OWORD *)&type->decl.abstract_origin->block.vars >= *( _OWORD *)&c->block.vars 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4797:11: error: use of undeclared identifier '_OWORD'
return *( _OWORD *)&type->decl.abstract_origin->block.vars >= *( _OWORD *)&c->block.vars 
          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4797:74: error: expected expression
return *( _OWORD *)&type->decl.abstract_origin->block.vars >= *( _OWORD *)&c->block.vars 
                                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4797:66: error: use of undeclared identifier '_OWORD'
return *( _OWORD *)&type->decl.abstract_origin->block.vars >= *( _OWORD *)&c->block.vars 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4798:15: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4798:7: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4798:45: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/tree.c:4798:37: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars 
                                    ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_fits_type_p/src/obj/tree.o] Error 1
